@@ -29,15 +29,27 @@ import org.apache.lucene.index.TermPositions;
 
 /**
  * Implementation of {@link TermPruningPolicy} that uses "residual IDF"
- * metric to determine the postings of terms to keep/remove. Residual
- * IDF is a difference between a collection-wide IDF of a term and the
- * observed in-document frequency of the term.
+ * metric to determine the postings of terms to keep/remove, as defined in
+ * <a href="">http://www.dc.fi.udc.es/~barreiro/publications/blanco_barreiro_ecir2007.pdf</a>.
+ * <p>Residual IDF measures a difference between a collection-wide IDF of a term
+ * (which assumes a uniform distribution of occurrences) and the actual
+ * observed total number of occurrences of a term in all documents. Positive
+ * values indicate that a term is informative (e.g. for rare terms), negative
+ * values indicate that a term is not informative (e.g. too popular to offer
+ * good selectivity).
+ * <p>This metric produces small values close to [-1, 1], so useful ranges for
+ * thresholds under this metrics are somewhere between [0, 1]. The higher the
+ * threshold the more informative (and more rare) terms will be retained. For
+ * filtering of common words a value of close to or slightly below 0 (e.g. -0.1)
+ * should be a good starting point. 
+ * 
  */
 public class RIDFTermPruningPolicy extends TermPruningPolicy {
   double defThreshold;
   Map<String, Double> thresholds;
-  double df;
+  double idf;
   double maxDoc;
+  double ridf;
 
   public RIDFTermPruningPolicy(IndexReader in,
           Map<String, Integer> fieldFlags, Map<String, Double> thresholds,
@@ -54,7 +66,18 @@ public class RIDFTermPruningPolicy extends TermPruningPolicy {
 
   @Override
   public void initPositionsTerm(TermPositions tp, Term t) throws IOException {
-    df = Math.log(in.docFreq(t) / maxDoc);
+    // from formula [2], not the formula [1]
+    // 
+    idf = - Math.log((double)in.docFreq(t) / maxDoc);
+    // calculate total number of occurrences
+    int totalFreq = 0;
+    while (tp.next()) {
+      totalFreq += tp.freq();
+    }
+    // reposition the enum
+    tp.seek(t);
+    // rest of the formula [2] in the paper
+    ridf = idf + Math.log(1 - Math.pow(Math.E,  - totalFreq / maxDoc));
   }
 
   @Override
@@ -65,7 +88,6 @@ public class RIDFTermPruningPolicy extends TermPruningPolicy {
   @Override
   public boolean pruneAllPositions(TermPositions termPositions, Term t)
           throws IOException {
-    double ridf = Math.log(1 - Math.pow(Math.E, termPositions.freq() / maxDoc)) - df;
     double thr = defThreshold;
     String key = t.field() + ":" + t.text();
     if (thresholds.containsKey(key)) {
